# LDOPE

./: .gitignore  CMakeLists.txt  algorithm_plot.py  cartesian_plot_result.py  cartesian_solve.py  generate_data.py  ldope.py  plot_cartesian_result.py  plot_spherical_result.py  plot_util.py  simulation_1_plot.py  simulation_2_plot.py  simulation_3_plot.py  solve_cartesian_model.py  solve_spherical_model.py  spherical_plot_result.py  spherical_solve.py  test.cpp  test_cartesian_core.py  test_cartesian_util.py  test_spherical_core.py  test_spherical_util.py
data/cartesian/: 1.data  1_norm.data  2.data  2_norm.data  3.data  3_norm.data  4_norm.data
data/spherical/: 1.data  2.data  3.data  4.data  5.data  6.data  7.data
inc/: core.h  util.h
src/: core.cpp  util.cpp
